--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@ footer {
 }
 
 #comments-list {
+    display: none;
     margin-top: 15px;
 }
 
@@ -346,4 +347,5 @@ button:hover {
     color: #555;
     font-size: 1rem;
     line-height: 1.5;
+
 }
